--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.5.0",
     "node-sass": "^9.0.0",
     "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
