--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
@@ -18,7 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "webpack": "^5.85.0",
-    "webpack-cli": "^5.1.3"
+    "webpack-cli": "^5.1.3",
+    "workbox": "^0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
@@ -29,6 +30,7 @@
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.5.0",
+    "jsdom": "^22.1.0",
     "node-sass": "^9.0.0",
     "sass-loader": "^13.3.1",
     "style-loader": "^3.3.3",
