--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "webpack": "^5.85.0",
-    "webpack-cli": "^5.1.3",
-    "workbox": "^0.0.0"
+    "fast-json-stable-stringify": "^2.1.0",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.1",
+    "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "aylien_textapi": "^0.7.0",
     "babel-loader": "^9.1.2",
@@ -32,8 +32,9 @@
     "jest": "^29.5.0",
     "jsdom": "^22.1.0",
     "node-sass": "^9.0.0",
-    "sass-loader": "^13.3.1",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
-    "webpack-dev-server": "^4.15.0"
+    "webpack-dev-server": "^4.15.1",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
